[project]
name = "mytsa"
version = "0.1.0"
description = "Pure-Python RFC 3161 Time Stamp Authority server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "asn1crypto>=1.5.1",
    "cryptography>=43.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
mytsa = "mytsa.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
