[project]
name = "demo-cfssl-ocsp"
version = "1.0.0"
description = "OCSP Responder for demo-cfssl Certificate Authority"
authors = [
    {name = "Demo CFSSL Project"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "cryptography>=43.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

