[project]
name = "demo-cfssl-ocsp"
version = "1.0.0"
description = "OCSP Responder for demo-cfssl Certificate Authority"
authors = [
    {name = "Demo CFSSL Project"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "cryptography>=43.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
ocsp-responder = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["main.py"]

[tool.uv]
dev-dependencies = []

