[project]
name = "pdf-signer"
version = "0.1.0"
description = "Sign PDFs with X.509 certificates and visible signature stamps"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.0",
    "pillow>=12.0.0",
    "pyhanko>=0.31.0",
    "reportlab>=4.4.4",
]

[project.scripts]
pdf-signer = "pdf_signer.sign:cli"
